--- a/styles/_webinars.scss
+++ b/styles/_webinars.scss
@@ -3,15 +3,12 @@
     // padding-bottom: 136px;
     position: relative;
     overflow: hidden;
-    background-image: url(/images/Line-bg3.png);
-    background-repeat: no-repeat;
-    background-position: 13% 45%;
-    @media (width > 1440px) {
-      background-position: 46% 45%;
-    }
+    background: url(/images/background/webinars-bg-1440.svg) 50% 135px no-repeat;
+    background-size: 1440px;
     @media (width < 1210px) {
-      background-image: url(/images/Line-bg3-2.png);
-      background-position: -277px 278px;
+      background: url(/images/background/webinars-bg-768.svg) calc(50% - -107px)
+        106px no-repeat;
+      background-size: 1568px;
     }
     @media (width < 768px) {
       background-image: none;
@@ -176,9 +173,10 @@
     opacity: 0.6;
   }
   &__btn:focus {
-    border: 2px solid $violet-dark;
+    border: 2px solid $white;
     outline: none;
   }
+
   &__card {
     border-radius: 32px;
     padding: 32px;
@@ -190,8 +188,6 @@
     justify-content: space-between;
     flex-direction: column;
     box-sizing: border-box;
-    background-repeat: no-repeat;
-    background-position: 100% 100%;
     @media (width < 1210px) {
       width: 340px;
       justify-content: flex-start;
@@ -205,10 +201,13 @@
     }
   }
   &__card:nth-child(1) {
-    background-color: $turquoise-dark;
-    background-image: url(/images/card1-bkg.svg);
+    background: $turquoise-dark url(/images/background/card1-bg-376.svg) 101%
+      101% no-repeat;
     @media (width < 1210px) {
-      background-position: 81px 55px;
+      background-position: 79px 82px;
+    }
+    @media (width < 768px) {
+      background-position: 61px 30px;
     }
   }
   &__card:nth-child(1) > p {
@@ -221,24 +220,27 @@
     }
   }
   &__card:nth-child(2) {
-    background-color: $coral-dark;
-    background-image: url(/images/card2-bkg.svg);
-    background-position: 100% 100%;
+    background: $coral-dark url(/images/background/card2-bg-376.svg) 100% 100%
+      no-repeat;
     @media (width < 1210px) {
-      background-image: url(/images/card2-bkg2.svg);
+      background-image: url(/images/background/card2-bg-340.svg);
+    }
+    @media (width < 768px) {
+      background-position: 62px -6px;
     }
   }
   &__card:nth-child(3) {
-    background-color: $tangerine-dark;
-    background-image: url(/images/card3-bkg.svg);
-    background-position: 0% 0%;
+    background: $tangerine-dark url(/images/background/card3-bg-376.svg) 0% 8px
+      no-repeat;
     @media (width < 1210px) {
-      background-image: url(/images/card3-bkg2.svg);
-      background-position-x: 24%;
+      background-image: url(/images/background/card3-bg-704.svg);
+      background-position: 24% 1px;
       flex-basis: 100%;
       height: 272px;
     }
     @media (width < 768px) {
+      background-image: url(/images/background/card1-bg-376.svg);
+      background-position: 61px 50px;
       height: 370px;
     }
   }
