--- a/styles/styles.css
+++ b/styles/styles.css
@@ -244,6 +244,7 @@ details summary::marker {
 }
 .header__nav {
   width: 698px;
+  margin-top: -1px;
 }
 @media (width < 1210px) {
   .header__nav {
@@ -252,6 +253,7 @@ details summary::marker {
     overflow-y: auto;
     padding-top: 21px;
     order: 4;
+    margin-top: 0;
   }
 }
 @media (width < 768px) {
@@ -265,6 +267,11 @@ details summary::marker {
 }
 .header__link:not(:last-child) {
   margin-right: 10px;
+}
+@media (width < 768px) {
+  .header__link:not(:last-child) {
+    margin-right: 7px;
+  }
 }
 .header__link {
   padding: 8px 18px;
@@ -435,42 +442,25 @@ details summary::marker {
     transform: translate(-150%, 0);
   }
 }
-.main__bkg {
+.main {
   padding-top: 80px;
   position: relative;
   overflow: hidden;
+  background: url(/images/background/bg-main-1440.svg) calc(50% - 52px) 51px no-repeat;
+  background-size: 1642px;
 }
 @media (width < 1210px) {
-  .main__bkg {
+  .main {
     padding-top: 64px;
+    background: url(/images/background/bg-main-768.svg) calc(50% + 164px) 108.5% no-repeat;
+    background-size: 1763px;
   }
 }
 @media (width < 768px) {
-  .main__bkg {
+  .main {
     padding-top: 36px;
-  }
-}
-.main__bkg-img {
-  position: absolute;
-  top: -80px;
-  left: calc(50% - 900px);
-  z-index: -10;
-}
-@media (width < 1210px) {
-  .main__bkg-img {
-    width: 1752px;
-    height: 1072px;
-    transform: rotate(-10.5deg);
-    top: -210px;
-    left: calc(50% - 735px);
-  }
-}
-@media (width < 768px) {
-  .main__bkg-img {
-    height: 900px;
-    transform: rotate(137deg);
-    top: 230px;
-    left: calc(50% - 890px);
+    background: url(/images/background/bg-main-320.svg) calc(50% + 164px) 108.5% no-repeat;
+    background-size: 1763px;
   }
 }
 .main__container {
@@ -875,22 +865,22 @@ details summary::marker {
   }
 }
 
-.articles__bkg {
+.articles {
   position: relative;
   overflow: hidden;
-}
-.articles__bkg-img {
-  position: absolute;
-  top: -117px;
-  left: calc(50% - 1390px);
-  z-index: -10;
+  background: url(/images/background/articles-bg-1440.svg) calc(50% + 119px) -121px no-repeat;
+  background-size: 3016px;
 }
 @media (width < 1210px) {
-  .articles__bkg-img {
-    top: -117px;
-    left: calc(50% - 1390px);
-    width: 2537px;
-    height: 1538px;
+  .articles {
+    background: url(/images/background/articles-bg-768.svg) calc(50% - 297px) 161px no-repeat;
+    background-size: 2543px;
+  }
+}
+@media (width < 768px) {
+  .articles {
+    background: url(/images/background/articles-bg-320.svg) calc(50% + 78px) -199px repeat-y;
+    background-size: 1175px;
   }
 }
 .articles__container {
@@ -1603,19 +1593,13 @@ details summary::marker {
 .webinars__bkg {
   position: relative;
   overflow: hidden;
-  background-image: url(/images/Line-bg3.png);
-  background-repeat: no-repeat;
-  background-position: 13% 45%;
-}
-@media (width > 1440px) {
-  .webinars__bkg {
-    background-position: 46% 45%;
-  }
+  background: url(/images/background/webinars-bg-1440.svg) 50% 135px no-repeat;
+  background-size: 1440px;
 }
 @media (width < 1210px) {
   .webinars__bkg {
-    background-image: url(/images/Line-bg3-2.png);
-    background-position: -277px 278px;
+    background: url(/images/background/webinars-bg-768.svg) calc(50% + 107px) 106px no-repeat;
+    background-size: 1568px;
   }
 }
 @media (width < 768px) {
@@ -1803,7 +1787,7 @@ details summary::marker {
   opacity: 0.6;
 }
 .webinars__btn:focus {
-  border: 2px solid #9853f4;
+  border: 2px solid #fcfaf9;
   outline: none;
 }
 .webinars__card {
@@ -1820,8 +1804,6 @@ details summary::marker {
   justify-content: space-between;
   flex-direction: column;
   box-sizing: border-box;
-  background-repeat: no-repeat;
-  background-position: 100% 100%;
 }
 @media (width < 1210px) {
   .webinars__card {
@@ -1840,12 +1822,16 @@ details summary::marker {
   }
 }
 .webinars__card:nth-child(1) {
-  background-color: #57acbc;
-  background-image: url(/images/card1-bkg.svg);
+  background: #57acbc url(/images/background/card1-bg-376.svg) 101% 101% no-repeat;
 }
 @media (width < 1210px) {
   .webinars__card:nth-child(1) {
-    background-position: 81px 55px;
+    background-position: 79px 82px;
+  }
+}
+@media (width < 768px) {
+  .webinars__card:nth-child(1) {
+    background-position: 61px 30px;
   }
 }
 @media (width < 1210px) {
@@ -1860,30 +1846,33 @@ details summary::marker {
   }
 }
 .webinars__card:nth-child(2) {
-  background-color: #fe6d44;
-  background-image: url(/images/card2-bkg.svg);
-  background-position: 100% 100%;
+  background: #fe6d44 url(/images/background/card2-bg-376.svg) 100% 100% no-repeat;
 }
 @media (width < 1210px) {
   .webinars__card:nth-child(2) {
-    background-image: url(/images/card2-bkg2.svg);
+    background-image: url(/images/background/card2-bg-340.svg);
+  }
+}
+@media (width < 768px) {
+  .webinars__card:nth-child(2) {
+    background-position: 62px -6px;
   }
 }
 .webinars__card:nth-child(3) {
-  background-color: #ef9700;
-  background-image: url(/images/card3-bkg.svg);
-  background-position: 0% 0%;
+  background: #ef9700 url(/images/background/card3-bg-376.svg) 0% 8px no-repeat;
 }
 @media (width < 1210px) {
   .webinars__card:nth-child(3) {
-    background-image: url(/images/card3-bkg2.svg);
-    background-position-x: 24%;
+    background-image: url(/images/background/card3-bg-704.svg);
+    background-position: 24% 1px;
     flex-basis: 100%;
     height: 272px;
   }
 }
 @media (width < 768px) {
   .webinars__card:nth-child(3) {
+    background-image: url(/images/background/card1-bg-376.svg);
+    background-position: 61px 50px;
     height: 370px;
   }
 }
@@ -2111,7 +2100,8 @@ details summary::marker {
 .form {
   width: 100%;
   height: 518px;
-  background: #57acbc url(/images/Line-bg-form1.png) 45% 23% no-repeat;
+  background: #57acbc url(/images/background/form-bg-1440.svg) calc(50% - 22px) -41px no-repeat;
+  background-size: 988px;
   -webkit-mask-image: url(/images/masks/form-bkg1.svg);
           mask-image: url(/images/masks/form-bkg1.svg);
   -webkit-mask-position: center;
@@ -2123,20 +2113,24 @@ details summary::marker {
 }
 @media (width < 1210px) {
   .form {
-    background: #57acbc url(/images/Line-bg-form2.png) 50% 23% no-repeat;
+    background: #57acbc url(/images/background/form-bg-768.svg) calc(50% + 2px) 2px no-repeat;
+    background-size: 704px;
     -webkit-mask-image: url(/images/masks/form-bkg1-2.svg);
             mask-image: url(/images/masks/form-bkg1-2.svg);
     height: auto;
-    margin-bottom: 57px;
+    margin-bottom: 96px;
   }
 }
 @media (width < 768px) {
   .form {
     -webkit-mask-image: url(/images/masks/form-bkg3.svg);
             mask-image: url(/images/masks/form-bkg3.svg);
+    background: #57acbc url(/images/background/form-bg-320.svg) 50% -18% no-repeat;
+    background-size: 304px;
     height: 1132px;
     -webkit-mask-position: center -30px;
             mask-position: center -30px;
+    margin-bottom: 57px;
   }
 }
 .form__container {
@@ -2173,7 +2167,7 @@ details summary::marker {
   flex-basis: 37%;
   width: 418px;
   height: 518px;
-  background-image: url(/images/letter-bkg.svg);
+  background-image: url(/images/background/form-bg-letter-1440.svg);
   -webkit-mask-image: url(/images/masks/form-bkg1.svg);
           mask-image: url(/images/masks/form-bkg1.svg);
   background-repeat: no-repeat;
@@ -2182,7 +2176,7 @@ details summary::marker {
 @media (width < 1210px) {
   .form__letter {
     height: 498px;
-    background-image: url(/images/form-bkg2-2.svg);
+    background-image: url(/images/background/form-bg-letter-768.svg);
     -webkit-mask-image: url(/images/masks/form-bkg2.svg);
             mask-image: url(/images/masks/form-bkg2.svg);
     flex-basis: 41%;
@@ -2191,7 +2185,7 @@ details summary::marker {
 }
 @media (width < 768px) {
   .form__letter {
-    background-image: url(/images/form-bkg2-3.svg);
+    background-image: url(/images/background/form-bg-letter-320.svg);
     -webkit-mask-image: none;
             mask-image: none;
     flex-basis: 100%;
@@ -2273,6 +2267,11 @@ details summary::marker {
 }
 @media (width < 1210px) {
   .form__text {
+    width: 360px;
+  }
+}
+@media (width < 768px) {
+  .form__text {
     width: 260px;
   }
 }
@@ -2286,7 +2285,7 @@ details summary::marker {
 @media (width < 1210px) {
   .form__box {
     flex-direction: column;
-    padding-top: 0px;
+    padding-top: 10px;
     width: 368px;
   }
 }
@@ -2333,24 +2332,24 @@ details summary::marker {
   font-weight: 700;
   font-size: 18px;
   line-height: 160%;
-  padding: 10px 27px;
+  padding: 10px 25px;
   background-color: #fcfaf9;
   color: #57acbc;
   border-radius: 88px;
   margin-top: 72px;
-  width: 524px;
+  width: 527px;
 }
 @media (width < 1210px) {
   .form__submitted-text {
-    width: 142px;
+    width: 160px;
     margin-top: 33px;
-    padding: 29px 114px 28px 24px;
+    padding: 27px 96px 28px 24px;
     border-radius: 24px;
   }
 }
 @media (width < 768px) {
   .form__submitted-text {
-    padding: 29px 90px 28px 24px;
+    padding: 30px 81px 28px 16px;
   }
 }
 .form__submitted-img {
@@ -2360,7 +2359,7 @@ details summary::marker {
 }
 @media (width < 1210px) {
   .form__submitted-img {
-    right: 17%;
+    right: 63px;
     top: 11px;
     width: 105px;
   }
