--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,19 +9,19 @@
   font-family: "Nunito Regular";
   font-style: normal;
   font-weight: normal;
-  src: local("Nunito"), url("../fonts/Nunito-Regular.ttf") format("truetype");
+  src: local("Nunito-Regular"), url("../fonts/Nunito-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: "Nunito Medium";
   font-style: normal;
   font-weight: medium;
-  src: local("Nunito"), url("../fonts/Nunito-Medium.ttf") format("truetype");
+  src: local("Nunito-Medium"), url("../fonts/Nunito-Medium.ttf") format("truetype");
 }
 @font-face {
   font-family: "Nunito Bold";
   font-style: normal;
   font-weight: bold;
-  src: local("Nunito"), url("../fonts/Nunito-Bold.ttf") format("truetype");
+  src: local("Nunito-Bold"), url("../fonts/Nunito-Bold.ttf") format("truetype");
 }
 html,
 body,
@@ -394,7 +394,7 @@ details summary::marker {
   overflow: hidden;
 }
 .runnig-string__text_artigos {
-  padding: 27px 48px 27px;
+  padding: 27px 48px 29px;
 }
 @media (width < 1210px) {
   .runnig-string__text_artigos {
@@ -402,11 +402,22 @@ details summary::marker {
     width: 320px;
   }
 }
+.runnig-string__text_webinars {
+  padding: 41px 38px 36px;
+}
 @media (width < 1210px) {
   .runnig-string__text_webinars {
-    padding: 20px 38px 16px;
+    padding: 18px 38px 18px;
     width: 156px;
   }
+}
+@media (width < 1210px) {
+  .runnig-string__text_webinars {
+    padding: 17px 38px 16px;
+  }
+}
+.runnig-string__text_subscribe {
+  padding: 41px 50px 36px;
 }
 @media (width < 1210px) {
   .runnig-string__text_subscribe {
@@ -422,7 +433,7 @@ details summary::marker {
 }
 @media (width < 768px) {
   .runnig-string__text_descuento {
-    padding: 21px 50px 18px;
+    padding: 21px 50px 20px;
     width: 475px;
   }
 }
@@ -431,7 +442,18 @@ details summary::marker {
   animation: running-string 40s infinite linear;
 }
 .runnig-string_bottom {
-  margin-top: -20px;
+  margin-bottom: -20px;
+}
+@media (width < 1210px) {
+  .runnig-string_bottom {
+    height: 164px;
+    margin-bottom: 0;
+  }
+}
+@media (width < 768px) {
+  .runnig-string_bottom {
+    height: 102px;
+  }
 }
 
 @keyframes running-string {
@@ -459,8 +481,8 @@ details summary::marker {
 @media (width < 768px) {
   .main {
     padding-top: 36px;
-    background: url(/images/background/bg-main-320.svg) calc(50% + 164px) 108.5% no-repeat;
-    background-size: 1763px;
+    background: url(/images/background/bg-main-320.svg) calc(50% - 40px) 30.5% no-repeat;
+    background-size: 1283px;
   }
 }
 .main__container {
@@ -825,6 +847,20 @@ details summary::marker {
   outline: none;
   padding: 8px 48px;
 }
+.main__runnig-string-box {
+  overflow: hidden;
+  height: 411px;
+}
+@media (width < 1210px) {
+  .main__runnig-string-box {
+    height: 300px;
+  }
+}
+@media (width < 768px) {
+  .main__runnig-string-box {
+    height: 266px;
+  }
+}
 .main__runnig-string {
   font-family: "ArchivoBlack";
   font-weight: 400;
@@ -835,33 +871,25 @@ details summary::marker {
   background-color: #acd6de;
   width: 3250px;
   transform: rotate(-4deg);
-  margin-bottom: 224px;
   padding-top: 10px;
-  padding-bottom: 5px;
+  margin-top: calc(7vw + 1vh - 49px);
+  margin-bottom: 0;
   margin-left: -10px;
-  margin-top: 62px;
-}
-@media (width > 1440px) {
-  .main__runnig-string {
-    margin-bottom: 212px;
-    padding-top: 10px;
-    padding-bottom: 2px;
-    margin-left: -10px;
-    margin-top: 78px;
-  }
 }
 @media (width < 1210px) {
   .main__runnig-string {
-    margin-top: 26px;
     transform: rotate(-3deg);
     width: 2150px;
-    margin-bottom: 194px;
+    margin-top: calc(8vw + 1vh - 44px);
+    padding-top: 9px;
+    padding-bottom: 5px;
   }
 }
 @media (width < 768px) {
   .main__runnig-string {
     margin-top: -10px;
     transform: rotate(-4deg);
+    margin-top: calc(5vw - 40px);
   }
 }
 
@@ -896,7 +924,7 @@ details summary::marker {
 }
 @media (width < 768px) {
   .articles__container {
-    padding-bottom: 38px;
+    padding-bottom: 22px;
   }
 }
 .articles__card {
@@ -1629,38 +1657,39 @@ details summary::marker {
     margin-left: -150px;
   }
 }
+.webinars__runnig-string-box {
+  overflow: hidden;
+  height: 372px;
+}
+@media (width < 1210px) {
+  .webinars__runnig-string-box {
+    height: 358px;
+  }
+}
+@media (width < 768px) {
+  .webinars__runnig-string-box {
+    height: 228px;
+  }
+}
 .webinars__runnig-string {
   background-color: #ffad20;
   width: 3250px;
   transform: rotate(-3deg);
-  margin-bottom: 148px;
-  padding-top: 40px;
-  padding-bottom: 35px;
-  margin-left: -5px;
-  margin-top: 107px;
-}
-@media (width > 1440px) {
-  .webinars__runnig-string {
-    margin-bottom: 136px;
-    padding-top: 41px;
-    padding-bottom: 35px;
-    margin-left: -5px;
-    margin-top: 117px;
-  }
+  margin-top: calc(9vw + 1vh - 36px);
+  margin-left: -10px;
 }
 @media (width < 1210px) {
   .webinars__runnig-string {
-    padding-top: 10px;
-    padding-bottom: 12px;
-    margin-top: 134px;
+    padding-top: 12px;
+    padding-bottom: 10px;
+    margin-top: calc(17vw + 1vh - 2px);
     transform: rotate(-3deg);
     width: 2150px;
-    margin-bottom: 142px;
   }
 }
 @media (width < 768px) {
   .webinars__runnig-string {
-    margin-top: -10px;
+    margin-top: calc(9vw + 1vh - 46px);
     transform: rotate(-4deg);
   }
 }
@@ -1680,14 +1709,14 @@ details summary::marker {
   .webinars__runnig-string_bottom {
     transform: rotate(3deg);
     width: 2150px;
-    margin-top: 42px;
+    margin-top: 45px;
     margin-bottom: 107px;
   }
 }
 @media (width < 768px) {
   .webinars__runnig-string_bottom {
     transform: rotate(4deg);
-    margin-top: 78px;
+    margin-top: 68px;
     margin-bottom: 32px;
   }
 }
