--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -36,6 +36,17 @@ details summary::marker {
 }
 
 .wrapper {
+  padding-top: 74px;
+  @media (width < 1210px) {
+    padding-top: 118px;
+  }
+  @media (width < 768px) {
+    padding-top: 114px;
+  }
+  min-height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 .wrap {
   width: 1210px;
@@ -48,119 +59,6 @@ details summary::marker {
   @media (width < 768px) {
     width: calc(320px - 16px);
     padding: 0 8px;
-  }
-}
-
-.header {
-  &__box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 16px;
-    padding-bottom: 15.2px;
-    flex-wrap: wrap;
-    @media (width < 1210px) {
-      display: flex;
-      padding-bottom: 0px;
-    }
-    @media (width < 768px) {
-      display: flex;
-      padding-bottom: 0px;
-      padding-top: 12px;
-    }
-  }
-  &__logo {
-    height: 40px;
-    width: 108.9px;
-    fill: $black;
-    transition: fill 0.3s;
-    @media (width < 768px) {
-      width: 140px;
-      height: 48px;
-      margin-left: -5px;
-    }
-  }
-  &__logo:hover {
-    fill: $pink-dark;
-  }
-  &__nav {
-    width: 698px;
-    margin-top: -1px;
-    @media (width < 1210px) {
-      width: auto;
-      display: flex;
-      overflow-y: auto;
-      padding-top: 21px;
-      order: 4;
-      margin-top: 0;
-    }
-    @media (width < 768px) {
-      padding-top: 13px;
-    }
-  }
-  &__nav::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-  }
-  &__link:not(:last-child) {
-    margin-right: 10px;
-    @media (width < 768px) {
-      margin-right: 7px;
-    }
-  }
-  &__link {
-    padding: 8px 18px;
-    border: 1.2px solid $pale;
-    border-radius: 20px;
-    @include Nunito15M-SLS;
-    color: $black;
-    user-select: none;
-    @media (width < 1210px) {
-      // font-family: "Nunito";
-      // font-weight: 500;
-      // font-size: 15px;
-    }
-  }
-
-  &__search {
-    display: flex;
-    justify-content: end;
-    @media (width < 1210px) {
-      margin-top: -4px;
-    }
-  }
-  &__search-img {
-    padding-right: 27px;
-    @media (width < 768px) {
-      padding-right: 22px;
-    }
-  }
-  &__search-span {
-    padding-right: 11px;
-    text-transform: uppercase;
-    @include Nunito15M-SLS;
-    position: relative;
-  }
-  &__search-span::before {
-    content: "";
-    display: block;
-    height: 1.5px;
-    width: 0%;
-    background-color: $grass;
-    position: absolute;
-    bottom: 0;
-    right: -17px;
-    transition: width 0.4s;
-  }
-  &__search-span:hover::before {
-    width: 67px;
-    left: 0;
-  }
-  &__search-span:hover::before {
-    @media (width <320px) {
-      width: 67px;
-      left: 0;
-    }
   }
 }
 
@@ -309,7 +207,7 @@ details summary::marker {
 //     width: 30px;
 //   }
 // }
-
+@import "header";
 @import "main";
 @import "articles";
 @import "webinars";
